update on screenshot

--- a/index.html
+++ b/index.html
@@ -184,7 +184,6 @@
 
 
 
-
   <main>
     <article>
 
@@ -203,7 +202,7 @@
               <span>Real Estate Agency</span>
             </p>
 
-            <h2 class="h1 hero-title">Find Your Dream House By Us</h2>
+            <h2 class="h1 hero-title">Find Your Dream House By Homeverse</h2>
 
             <p class="hero-text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore.
